--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -66,11 +66,6 @@
                     <span id="number2" class="res-number">0</span>
                 </button>
 
-                <button class="open-menu" id="open-menu">
-                    <i class="ri-menu-line nav_burger"></i>
-                    <i class="ri-close-large-fill nav_close"></i>
-                </button>
-
                 <div class="go-back" id="go-back">
                     <button id="indexBtn" class="a-back-arrow2">
                         <i class="ri-arrow-left-wide-line"></i>
@@ -111,9 +106,10 @@
                 <div id="empty-comment" class="empty-comment">
 
                     <div class="empty-container">
-                        <div class="heading-right">
+                        <div class="heading-right-div">
+                            <span class="wizzars-heading">Llena el carrito con lo que más te gusta!</span> 
                             <div class="wizard-circles">
-                                <!-- barra wizard -->
+                                <!-- wizard bar -->
                                 <ul class="wizard-steps">
                                     <li data-target="#step1" class="active">
                                         <span class="step">1</span>
@@ -128,7 +124,11 @@
                                     </li>
                                 </ul>
                             </div>
-                            <span class="wizzars-heading">Por favor revisa tu carrito de Compras</span>
+                            <div class="wizard-step-div">
+                                <span class="wizzard-step-title">Haz click en un producto</span>
+                                <span class="wizzard-step-title">Confirma tu compra en el carrito</span>
+                                <span class="wizzard-step-title">Realizar el pago</span>
+                            </div>
                         </div>
                         <div class="no-products">
                             <div class="empty-wrap">
