--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -230,9 +230,10 @@
 }
 
 .btns-emptyCart-div {
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: end;
   padding: var(--space-unit);
 }
 
