--- a/public/css/index.css
+++ b/public/css/index.css
@@ -241,8 +241,6 @@ aside {
   outline: 0;
   border: 0;
   white-space: nowrap;
-  box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.35),
-    inset 0px 2px 1px 0px rgba(255, 255, 255, 0.35);
   z-index: 5;
 }
 
@@ -675,27 +673,21 @@ main {
 }
 
 .navbar {
-  width: 100%;
+  width: 101%;
   height: 0;
   position: absolute;
-  top: 100%;
+  top: 98%;
   left: 50%;
   color: var(--clr-whiteish);
   background-color: var(--clr-aside);
-  box-shadow: var(--shadow-1);
-  padding-inline: 20px;
   transform: translateX(-50%);
   transition: 0.25s ease;
   overflow: hidden;
+  z-index: 1000;
 }
 
 .navbar.active {
-  height: 236px;
-  visibility: visible;
-}
-
-.navbar-list {
-  margin-block: 10px;
+  height: 210px;
 }
 
 .nav-item:not(:last-child) {
