--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
-    
+
     <!-- Optimización de CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" media="all">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/sweetAlert.css" media="all">
     <link rel="stylesheet" href="/css/cart.css" media="all">
     <link rel="stylesheet" href="/css/index.css" media="all">
-    
+
     <!-- Optimización de JS -->
     <script src="https://cdn.jsdelivr.net/npm/toastify-js" defer></script>
     <script src="/scripts/menu.js" defer></script>
@@ -155,10 +155,10 @@
         </main>
     </div>
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="/scripts/menu.js"></script>
-    <script src="/scripts/main.js"></script>
-    <script src="/scripts/search.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js" defer></script>
+    <script src="/scripts/menu.js" defer></script>
+    <script src="/scripts/main.js" defer></script>
+    <script src="/scripts/search.js" defer></script>
 </body>
 
 </html>
