--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -4,18 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Preload de fuentes o hojas de estilo críticas si es necesario -->
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" as="style" />
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" as="style" />
+
+    <!-- Hoja de estilo externa con media="all" para que no bloquee la renderización -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css"
         integrity="sha512-OQDNdI5rpnZ0BRhhJc+btbbtnxaj+LdQFeh0V9/igiEPDiWE2fG+ZsXl0JEH+bjXKPJ3zcXqNyP4/F/NegVdZg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer" media="all" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" type="text/css" href="/css/index.css">
-    <link rel="stylesheet" type="text/css" href="/css/cart.css">
+        crossorigin="anonymous" referrerpolicy="no-referrer" media="all" />
+
+    <!-- Hojas de estilo locales con media="all" -->
+    <link rel="stylesheet" type="text/css" href="/css/index.css" media="all">
+    <link rel="stylesheet" type="text/css" href="/css/cart.css" media="all">
+
+    <!-- Favicon y título -->
     <link rel="icon" href="/images/favicon.png" type="image/x-icon">
 
     <title>Tienda online</title>
 </head>
+
 
 <body>
     <div class="wrapper">
@@ -107,7 +119,7 @@
 
                     <div class="empty-container">
                         <div class="heading-right-div">
-                            <span class="wizzars-heading">Llena el carrito con lo que más te gusta!</span> 
+                            <span class="wizzars-heading">Llena el carrito con lo que más te gusta!</span>
                             <div class="wizard-circles">
                                 <!-- wizard bar -->
                                 <ul class="wizard-steps">
@@ -174,8 +186,8 @@
         </main>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/scripts/cart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
+    <script src="/scripts/cart.js" defer></script>
 </body>
 
 </html>
