--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,20 +1,20 @@
 <nav>
     <ul class="menu">
         <li>
-            <button class="btnMenu btn-category" id="indexBtn">
+            <button type="button" role="button" class="btnMenu btn-category" id="indexBtn">
                 <i class="ri-arrow-left-wide-line"></i>
                 Seguir comprando
             </button>
         </li>
         <li>
-            <button class="btnMenu active">
+            <button type="button" role="button" class="btnMenu active">
                 <i class="ri-shopping-cart-2-fill"></i>
                 Carrito
             </button>
         </li>
     </ul>
 </nav>
-<footer class="text-footer"> <!-- JS --> </footer>
+<footer class="text-footer">BStudio</footer>
 </aside>
 <main class="cart-main">
     <div class="main-header">
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="btns-emptyCart-div">
-                    <button type="button" id="indexBtn" class="btn btn-b">Ir a
+                    <button type="button" role="button" id="indexBtn" class="btn btn-b">Ir a
                         Comprar <i class="ri-shopping-cart-2-fill"></i>
                     </button>
                 </div>
@@ -70,7 +70,7 @@
 
         <div id="cart-actions" class="cart-actions disabled">
             <div class="cart-actions-left">
-                <button id="btn-cart-empty" class="btn btn-cart-empty">
+                <button type="button" role="button" id="btn-cart-empty" class="btn btn-cart-empty">
                     Vaciar carrito
                 </button>
             </div>
@@ -79,7 +79,7 @@
                     <p>Total:</p>
                     <p id="total">₡ 0</p>
                 </div>
-                <button id="btn-cart-buy" class="btn btn-cart-buy">
+                <button type="button" role="button" id="btn-cart-buy" class="btn btn-cart-buy">
                     Comprar ahora
                 </button>
             </div>
