--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,33 +24,37 @@
 <body>
     <div class="wrapper">
         <header class="header-mobile">
-            <button id="indexBtn">
+            <button type="button" role="button" id="indexBtn">
                 <img class="logo" src="/images/logo.webp" alt="logo" width="150" height="50">
             </button>
             <nav class="navbar" data-navbar>
                 <ul class="navbar-list">
                     <li class="nav-item">
-                        <button id="all" class="btn-menu-mobile btn-category" data-nav-link>
+                        <button type="button" role="button" id="all" class="btn-menu-mobile btn-category" data-nav-link>
                             Productos varios
                         </button>
                     </li>
                     <li class="nav-item">
-                        <button id="shirts" class="btn-menu-mobile btn-category" data-nav-link>
+                        <button type="button" role="button" id="shirts" class="btn-menu-mobile btn-category"
+                            data-nav-link>
                             Camisetas
                         </button>
                     </li>
                     <li class="nav-item">
-                        <button id="coats" class="btn-menu-mobile btn-category" data-nav-link>
+                        <button type="button" role="button" id="coats" class="btn-menu-mobile btn-category"
+                            data-nav-link>
                             Abrigos
                         </button>
                     </li>
                     <li class="nav-item">
-                        <button id="pants" class="btn-menu-mobile btn-category" data-nav-link>
+                        <button type="button" role="button" id="pants" class="btn-menu-mobile btn-category"
+                            data-nav-link>
                             Pantalones
                         </button>
                     </li>
                     <li class="nav-item">
-                        <button id="shoes" class="btn-menu-mobile btn-category" data-nav-link>
+                        <button type="button" role="button" id="shoes" class="btn-menu-mobile btn-category"
+                            data-nav-link>
                             Zapatos
                         </button>
                     </li>
@@ -65,13 +69,14 @@
                     </div>
                 </div>
 
-                <button id="cartBtn" class="res-cart">
+                <button type="button" role="button" id="cartBtn" class="res-cart">
                     <i class="ri-shopping-cart-2-fill"></i>
                     <span id="number2" class="res-number">0</span>
                 </button>
 
                 <div class="header-btn-group" id="header-btn-group">
-                    <button class="nav-toggle-btn" aria-label="Toggle Menu" data-menu-toggle-btn>
+                    <button type="button" role="button" class="nav-toggle-btn" aria-label="Toggle Menu"
+                        data-menu-toggle-btn>
                         <span class="line top"></span>
                         <span class="line middle"></span>
                         <span class="line bottom"></span>
@@ -79,7 +84,7 @@
                 </div>
 
                 <div class="go-back" id="go-back">
-                    <button id="indexBtn" class="a-back-arrow">
+                    <button type="button" role="button" id="indexBtn" class="a-back-arrow">
                         <i class="ri-arrow-left-wide-line"></i>
                         Atras
                     </button>
@@ -97,9 +102,6 @@
 
                 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
                 <script src="https://cdn.jsdelivr.net/npm/toastify-js" defer></script>
-                <script src="/scripts/menu.js" defer></script>
-                <script src="/scripts/main.js" defer></script>
-                <script src="/scripts/search.js" defer></script>
 </body>
 
 </html>
